--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,21 @@
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
 
-    <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
+    {% if page.images %}
+      <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/resources/js-image-slider.css" />
+      <script async src="{{ site.baseurl }}/resources/js-image-slider.js" type="text/javascript"></script>
+    {% endif %}
+
+    <script async src="{{ site.baseurl }}/resources/notification.js" type="text/javascript"></script>
+    <script async src="{{ site.baseurl }}/resources/cheet.js" type="text/javascript"></script>
+
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/resources/table.css" />
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/resources/blockquote.css" />
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/resources/notification.css" />
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/resources/video.css" />
+
+    <link rel="icon" type="image/ico"  href="../resources/favicon.ico">
+    {% seo %}
   </head>
 
   <body>
@@ -45,6 +59,23 @@
         </footer>
       </div>
     </div>
+
+    {% if page.images %}
+      <script type="text/javascript">
+          //The following script is for the group 2 navigation buttons.
+          function switchAutoAdvance() {
+              imageSlider.switchAuto();
+              switchPlayPauseClass();
+          }
+          function switchPlayPauseClass() {
+              var auto = document.getElementById('auto');
+              var isAutoPlay = imageSlider.getAuto();
+              auto.className = isAutoPlay ? "group2-Pause" : "group2-Play";
+              auto.title = isAutoPlay ? "Pause" : "Play";
+          }
+          switchPlayPauseClass();
+      </script>
+    {% endif %}
 
     {% include analytics.html %}
   </body>
