--- a/style.scss
+++ b/style.scss
@@ -18,9 +18,11 @@ html {
 }
 
 body {
-	background: $white;
+  background: $white;
   font: 18px/1.4 $helvetica;
   color: $darkGray;
+  background: url(resources/Samurai.jpg) bottom left no-repeat fixed;
+  background-size: 25%;
 }
 
 .container {
@@ -36,7 +38,7 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: bold;
 
   line-height: 1.7;
-  margin: 1em 0 15px;
+  margin: 0em 0 15px;
   padding: 0;
 
   @include mobile {
@@ -244,6 +246,14 @@ nav {
 .posts > .post {
   padding-bottom: 2em;
   border-bottom: 1px solid $lightGray;
+
+  padding: 10px;
+  margin-bottom: 10px;
+  background-color: #EAEFFF;
+  border: 3px solid #C8D7FF;
+  background-image: url(resources/Zen_SectionTopRight.jpg);
+  background-repeat: no-repeat;
+  background-position: right top;
 }
 
 .posts > .post:last-child {
@@ -271,6 +281,31 @@ nav {
   }
 }
 
+.pagination {
+  text-align: center;
+}
+
+.pagination a {
+    border-radius: 5px;
+    text-align: center;
+}
+
+.pagination a.active {
+    border-radius: 5px;
+}
+
+.header img {
+  float: left;
+  width: 150px;
+  height: 60px;
+  background: #555;
+}
+
+.header h1 {
+  position: relative;
+  top: 18px;
+  left: 10px;
+}
 .wrapper-footer {
   margin-top: 50px;
   border-top: 1px solid #ddd;
