--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,9 +42,11 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
+            <a href="{{ site.baseurl }}/contact">Contact</a>
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
         </header>
+        <div id="notification" name="notification" style="display: none;"></div>
       </div>
     </div>
 
