--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,17 +1,23 @@
 ---
 layout: default
 ---
+<div class="posts">
+  <article class="post">  
+    <div class="header">  
+    <img src="/resources/Zen_SectionTopLeft.jpg" />
+    <h1>{{ page.title }}</h1>
+    </div>
+    <br />
 
-<article class="post">
-  <h1>{{ page.title }}</h1>
+    <div class="entry">
+      {{ content }}
+    </div>
+    <div class="row">
+      <div class="col-xs-6 date text-left">
+        Written on {{ page.date | date: "%B %e, %Y" }}
+      </div>
+    </div>
 
-  <div class="entry">
-    {{ content }}
-  </div>
-
-  <div class="date">
-    Written on {{ page.date | date: "%B %e, %Y" }}
-  </div>
-
-  {% include disqus.html %}
-</article>
+    {% include disqus.html %}
+  </article>
+</div>
